# telegram-ssh-bot

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  setup.sh
.github/workflows/: docker-publish.yml
lib/: asyncio_workers.py  blackjack.py  bot.py  bot_commands.py  config_reader.py  database.py  downloader.py  emulated_terminal.py  gambler.py  init.py  ledger.py  logger.py  matplotlib_tables.py  models.py  opencv_custom_writer.py  otp_manager.py  physics_simulation.py  roulette.py  ssh_commands.py  ssh_interactive_session.py  ssh_manager.py  ssh_session.py  storage.py  temporal_storage.py
lib/api/: docker_api.py  gemini_api.py  geoip_api.py  github_api.py  joke_api.py  meme_api.py  reddit_api.py
lib/callbacks/: switch_host_callback.py
lib/handlers/: admin.py  commands.py  errors.py  messages.py  public_commands.py  ssh_session.py
lib/keyboards/: link_keyboard.py  switch_host_keyboard.py
lib/llms/: general_llm.py  openrouter.py
lib/middlewares/: access_middleware.py  loggerMiddleware.py  logger_middleware.py  user_middleware.py
lib/router_factories/: admin_commands.py  blackjack_session.py  commands.py  general_commands.py  reactions.py  ssh_session.py
lib/routers/: admin.py  admin_commands.py  errors.py  group.py  group_admin.py  group_general.py  inline_queries.py  messages.py  private_admin.py  public_commands.py  ssh_session.py
lib/states/: blackjack_state.py  confirmation_state.py  ssh_session_state.py  switch_state.py
migrations/: 001_add_galton_background_path.py
(+6 files in other folders)
