[project]
name = "telegram-ssh-bot"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "aiogram>=3.28.2",
    "aiohttp-socks>=0.11.0",
    "apscheduler>=3.11.2",
    "colorama>=0.4.6",
    "matplotlib>=3.10.9",
    "paramiko>=5.0.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pyotp>=2.9.0",
    "pyte>=0.8.2",
    "rcon>=2.4.9",
]
